--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "sweetalert2": "^11.10.1",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
