--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "image-library-app",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://deanalifahmad25.github.io/image-library-app/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -23,6 +25,7 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "gh-pages": "^6.1.0",
     "prettier": "^3.0.3",
     "vite": "^5.0.5"
   }
